Commnet endpoint: made update isUpvoted or not comment upvotes