@@ -2,7 +2,6 @@ package com.sourcery.oirs.service;
 
 import com.sourcery.oirs.database.entity.CommentEntity;
 import com.sourcery.oirs.database.repository.CommentRepository;
-import com.sourcery.oirs.exceptions.CommentIsVotedException;
 import com.sourcery.oirs.exceptions.CommentNotFoundException;
 import com.sourcery.oirs.mapper.CommentMapper;
 import com.sourcery.oirs.model.Comment;
@@ -12,38 +11,45 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Transactional
 public class CommentService {
     private final CommentRepository commentRepository;
 
+
     public List<Comment> getAllCommentsByIssueId(UUID issueId) {
+        UUID customUserId = getCustomUserId();
+        List<UUID> commentsIds = commentRepository.getAllCommentsIdsByEmployeeId(issueId, customUserId);
         return commentRepository.getAllCommentsByIssueId(issueId)
-                .stream().map(CommentMapper::toComment).toList();
+                .stream()
+                .map(CommentMapper::toComment)
+                .peek(comment -> comment.setIsUpVoted(commentsIds.contains(comment.getId())))
+                .collect(Collectors.toList());
     }
 
     public Comment saveComment(CreateCommentForm createCommentForm) {
         CommentEntity commentEntity = CommentMapper.toCommentEntity(createCommentForm);
         UUID commentId = commentEntity.getId();
-        UUID customUserId = customUserId();
-        commentRepository.saveCommentUpvote(commentId, customUserId);
         commentRepository.saveComment(commentEntity);
         CommentEntity savedComment = findCommentById(commentId);
         return CommentMapper.toComment(savedComment);
     }
 
-    public Comment updateCommentVotes(UUID id, Integer votes) {
+    public Comment updateCommentVotes(UUID id, UUID issueId, Integer votes) {
         CommentEntity commentEntity = findCommentById(id);
-        if (commentRepository.checkIfIsVotedForComment(commentEntity.getId(), customUserId()) != null) {
-            throw new CommentIsVotedException("You voted for this comment!");
-        }
+        boolean commentIsUpVoted = isVoted(id, issueId);
         commentRepository.updateCommentVotes(id, votes);
         CommentEntity updatedCommentEntity = findCommentById(id);
-        return CommentMapper.toComment(updatedCommentEntity);
+        Comment updatedComment = CommentMapper.toComment(updatedCommentEntity);
+        updatedComment.setIsUpVoted(commentIsUpVoted);
+        return updatedComment;
     }
 
     public Comment getCommentById(UUID id) {
@@ -55,7 +61,17 @@ public class CommentService {
                 .orElseThrow(() -> new CommentNotFoundException("Such comment doesn't exist. No found by id " + id));
     }
 
-    private UUID customUserId() {
+    private boolean isVoted(UUID commentId, UUID IssueId) {
+        UUID customUserId = getCustomUserId();
+        if (commentRepository.checkIfIsVotedForComment(commentId, getCustomUserId()) != null) {
+            commentRepository.deleteCommentUpvote(commentId, customUserId);
+            return false;
+        }
+        commentRepository.saveCommentUpvote(commentId, customUserId, IssueId);
+        return true;
+    }
+
+    private UUID getCustomUserId() {
         Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
         CustomUserDetails customUserDetails = (CustomUserDetails) authentication.getPrincipal();
         return customUserDetails.getId();
